--- a/style.css
+++ b/style.css
@@ -222,6 +222,17 @@ body {
   font-size: 16px;
   font-weight: bold;
   transition: background-color 0.3s ease;
+    position: absolute;
+    left: 30px;
+    top: 50%;
+    transform: translateY(-50%);
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    padding: 8px 15px;
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 8px;
+    transition: background 0.3s;
 }
 
 .btn-link:hover {
@@ -358,3 +369,4 @@ body {
             color: white;
 
         }
+
