--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ body {
     transition: 0.3s;
 }
 .btn-link {
-  /* display: inline-block;
+  display: inline-block;
   padding: 12px 24px;
   background-color: #4CAF50;
   color: white;
@@ -221,18 +221,7 @@ body {
   border-radius: 6px;
   font-size: 16px;
   font-weight: bold;
-  transition: background-color 0.3s ease; */
-    position: absolute;
-    left: 30px;
-    top: 50%;
-    transform: translateY(-50%);
-    text-decoration: none;
-    color: black;
-    font-weight: bold;
-    padding: 8px 15px;
-    background: rgba(255, 255, 255, 0.3);
-    border-radius: 8px;
-    transition: background 0.3s;
+  transition: background-color 0.3s ease;
 }
 
 .btn-link:hover {
@@ -369,5 +358,6 @@ body {
             color: white;
 
         }
+
 
 
